--- a/netlify.toml
+++ b/netlify.toml
@@ -6,6 +6,8 @@
 [functions]
   node_bundler = "esbuild"
   external_node_modules = ["mercadopago"]
+  directory = "/netlify/functions"
+
 
 [[redirects]]
   from = "/api/payment/*"
